fix KaTeX horizontal scroll on small width viewports
See #9

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -141,6 +141,12 @@ a.blog-tag {
 	}
 }
 
+// scroll on viewport overflow
+.katex-display {
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+
 // UTILITIES
 
 // loop for dark backgrounds
